# Navwidget

./: CMakeLists.txt  m_elawindow.cpp  m_elawindow.h  main.cpp  widget.cpp  widget.h
Resource/: Resources.qrc
